2012-07-17  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* lib/Algorithm/MasterMind/Consistent_Set.pm (consistent_strings):
	Adding pod docs for this module.

	* MANIFEST: Adding Consistent_Set , also missing.

2012-07-15  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* MANIFEST: Re-adding some missing files.

2012-07-14  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* MANIFEST: Adding missing files in Distro. 
	Eliminated Generational_Partitions, sometimes it gets
	stuck. Removing old test files from the folders too. 

2012-07-10  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* lib/Algorithm/MasterMind.pm: Starting 0.4.1 with a minor version
	change for A::E.

	* Makefile.PL: Changing Clone to Clone::Fast, more updated. 

2012-06-05  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* lib/Algorithm/MasterMind/EvoD.pm (issue_next): Getting rid of
	fixed-size consistent sets to use whatever stands unchanged for 5
	generations. 

2012-06-03  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* lib/Algorithm/MasterMind/EvoC.pm (issue_next): This is
	positively a hack. Changing the consistent set size to 5 times as
	much in the first iteration, normal afterwards. The main
	difference between these with limited set size is that the size
	decreases more slowly. 
	(issue_next): Multiplier set to 10 and result:

	real	364m17.528s
user	363m54.710s
sys	0m4.060s


2012-06-01  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* lib/Algorithm/MasterMind/Partition_Entropy_1st.pm (issue_first):
	Changed first move to that one with biggest entropy (different
	letters). 
	(issue_first): Going back to the first option: Knuth's. It works
	better. 

2012-05-31  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* app/IEEE-CIG/conf-entropy-4-6.yaml (ID): After adding an Entropy
	algorithm, checking it with the most basic configuration. 

	Result: 
real	491m13.892s
user	490m34.210s
sys	0m9.330s

2012-05-26  Juan J. Merelo Guervós  <jjmerelo@gmail.com>
