@@ -1,3 +1,7 @@
+2012-07-19  Juan J. Merelo Guervós  <jjmerelo@gmail.com>
+
+	* MANIFEST: Taking out test for obsolete module. 
+
 2012-07-17  Juan J. Merelo Guervós  <jjmerelo@gmail.com>
 
 	* lib/Algorithm/MasterMind/Consistent_Set.pm (consistent_strings):
